[gd_scene load_steps=10 format=3 uid="uid://mrpjua8vrjbm"]

[ext_resource type="Script" path="res://Entities/Walker/walker.gd" id="1_s3utj"]
[ext_resource type="Texture2D" uid="uid://cskkn4msp680m" path="res://Entities/Walker/walker.png" id="1_w5o88"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j6qm2"]
atlas = ExtResource("1_w5o88")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylked"]
atlas = ExtResource("1_w5o88")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrcai"]
atlas = ExtResource("1_w5o88")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5la5r"]
atlas = ExtResource("1_w5o88")
region = Rect2(56, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_3u5mc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6qm2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylked")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrcai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5la5r")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thx4v"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wha30"]
size = Vector2(10, 10)

[node name="Walker" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(-4, -4)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_s3utj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_3u5mc")
animation = &"run"
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_thx4v")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_wha30")

[node name="DownCast" type="RayCast2D" parent="."]
position = Vector2(9, 0)
target_position = Vector2(0, 10)

[node name="AheadCast" type="RayCast2D" parent="."]
position = Vector2(4, 4)
target_position = Vector2(8, 0)
collision_mask = 5

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
